# rdp2exec

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
scripts/: entrypoint.sh
src/common/: protocol.hpp
src/launcher/: rdp2exec.py
src/plugin/: rdp2exec_client.cpp
src/windows/: rdp2exec_bridge.cpp
